# network-analysis

./: .gitignore  .vercelignore  LICENSE  README.md  index.html  main.py  pyproject.toml  requirements.txt  script.js  styles.css
.github/workflows/: tests.yml
data/: dashboard-metrics.json  network-karate.json
notebooks/: analysis.ipynb
src/: __init__.py  community_detection.py  influence_analysis.py  link_prediction.py  network_builder.py  visualisation.py
tests/: test_pipeline.py
