[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "network-analysis-toolkit"
version = "0.1.0"
description = "Graph analytics toolkit for community detection, influence spread, and link prediction"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Michael Yip" }
]
dependencies = [
  "networkx>=3.1",
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "scikit-learn>=1.3",
  "scipy>=1.11"
]

[project.optional-dependencies]
dev = [
  "jupyter>=1.0",
  "pytest>=8.0"
]

[project.scripts]
network-analysis = "main:cli"

[tool.setuptools]
packages = ["src"]
py-modules = ["main"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
